--- a/res/layout/web_login.xml
+++ b/res/layout/web_login.xml
@@ -22,6 +22,7 @@
                 android:paddingRight="10dp"
                 android:paddingLeft="10dp"
                 android:layout_width="fill_parent"
+                android:inputType="textWebEmailAddress"
                 android:layout_height="wrap_content"
                 />
     </TableRow>
