--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -13,7 +13,7 @@
             android:id="@+id/navigation_panel"
             android:layout_alignParentLeft="true"
             android:background="#FF404040"
-            android:visibility="visible"
+            android:visibility="invisible"
             >
         <TextView
                 android:layout_width="fill_parent"
