global log download new versions via download manager hardware acceleration async background text rendering (alpha) timeout (for gprs connections) ExtXMPP keep alive update read markers synchronous render (prepare in bg) other threads are put in LOW_PRIORITY ugnich ws update tweaks for smoother userpic load authorization cancel

--- a/res/layout/xmpp_control.xml
+++ b/res/layout/xmpp_control.xml
@@ -436,6 +436,23 @@
                         >
                 </TextView>
             </TableRow>
+            <TableRow>
+                <TextView
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="right"
+                        android:text="HW Accel:"
+                        android:textStyle="bold"
+                        >
+
+                </TextView>
+                <TextView
+                        android:id="@+id/hardware_acceleration"
+                        android:layout_height="wrap_content"
+                        android:paddingLeft="5sp"
+                        android:text=""
+                        >
+                </TextView>
+            </TableRow>
         </TableLayout>
     </ScrollView>
 </RelativeLayout>
