--- a/res/layout/listitem_juickmessage.xml
+++ b/res/layout/listitem_juickmessage.xml
@@ -34,9 +34,9 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/pretext"
-            android:text="xxxxxx"
+            android:text=""
             android:gravity="top"/>
-        <ImageView
+        <com.juick.android.MyImageView
                 android:id="@+id/userpic"
                 android:layout_width="32px"
                 android:layout_below="@id/pretext"
