--- a/res/xml/prefs_other.xml
+++ b/res/xml/prefs_other.xml
@@ -20,10 +20,13 @@
     </Preference>
     <CheckBoxPreference
             android:key="enableLoginNameWithCrashReport"
-            android:title="Attach your microblog ID to crash report"
-            android:summary="Two-way contact with developer"
+            android:title="@string/AttachYourIdToReport"
+            android:summary="@string/TwoWayContact"
             android:defaultValue="false"
             android:persistent="true"/>
+    <Preference android:title="@string/SendAppLogToDeveloper" android:summary="@string/ContainsMinor__">
+        <intent android:targetPackage="com.juickadvanced" android:targetClass="com.juick.android.JuickPreferencesActivity" android:action="sendlog"/>
+    </Preference>
     <Preference android:title="@string/VariousInfo" android:summary="@string/VariousInfo2">
         <intent android:targetPackage="com.juickadvanced" android:targetClass="com.juick.android.JuickPreferencesActivity" android:action="various_info"/>
     </Preference>
