--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -8,7 +8,6 @@
         android:icon="@drawable/ic_action_refresh"
         android:title="@string/Refresh"
         android:showAsAction="always"/>
-        android:showAsAction="never"/>
     <item android:id="@+id/menuitem_search"
           android:icon="@drawable/ic_action_search"
           android:title="@string/Search"
@@ -16,5 +15,11 @@
     <item android:id="@+id/menuitem_preferences"
         android:icon="@android:drawable/ic_menu_preferences"
         android:title="@string/Settings"
+        android:showAsAction="never"/>
+    <item android:id="@+id/menuitem_new_saved_sharing_key"
+        android:title="Get New URL for sharing"
+        android:showAsAction="never"/>
+    <item android:id="@+id/menuitem_existing_saved_sharing_key"
+        android:title="Get Existing URL for sharing"
         android:showAsAction="never"/>
 </menu>
