--- a/res/xml/prefs_ui.xml
+++ b/res/xml/prefs_ui.xml
@@ -87,7 +87,7 @@
                 android:persistent="true"/>
         <CheckBoxPreference
                 android:key="enableDrafts"
-                android:title="Enable saving drafts"
+                android:title="@string/EnableSavingDrafts"
                 android:defaultValue="false"
                 android:persistent="true"/>
         <CheckBoxPreference
@@ -145,7 +145,7 @@
         <CheckBoxPreference
                 android:key="text_accelerated"
                 android:title="Early text render"
-                android:summary="Render text in BG thread"
+                android:summary="Render text in BG thread (pre-alpha, do not use.)"
                 android:defaultValue="false"
                 android:persistent="true"/>
         <CheckBoxPreference
