--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -201,4 +201,30 @@
         <item>message</item>
         <item>page</item>
     </string-array>
+    <string-array name="censorLevels">
+        <item>off</item>
+        <item>very forgiving</item>
+        <item>forgiving</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+        <item>6</item>
+        <item>7</item>
+        <item>strict</item>
+        <item>very strict</item>
+        <item>draconian</item>
+    </string-array>
+    <string-array name="censorLevelsValues">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+        <item>6</item>
+        <item>7</item>
+        <item>8</item>
+        <item>9</item>
+        <item>10</item>
+    </string-array>
 </resources>
