--- a/res/drawable-mdpi/testdigits.xml
+++ b/res/drawable-mdpi/testdigits.xml
@@ -1,18 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item>
-        <bitmap android:src="@drawable/juick_message_icon_128" android:gravity="left|top"/>
+<level-list>
+    <item
+            minLevel="0">
+        <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+            <item>
+                <bitmap
+                        android:src="@drawable/juick_message_icon_128"
+                        android:gravity="left|top"/>
+            </item>
+            <item>
+                <bitmap
+                        android:src="@drawable/sub000"
+                        android:gravity="left|top"/>
+            </item>
+            <item>
+                <bitmap
+                        android:src="@drawable/n500"
+                        android:gravity="left|top"/>
+            </item>
+            <item>
+                <bitmap
+                        android:src="@drawable/n0_0"
+                        android:gravity="left|top"/>
+            </item>
+            <item>
+                <bitmap
+                        android:src="@drawable/n00_"
+                        android:gravity="left|top"/>
+            </item>
+        </layer-list>
     </item>
-    <item>
-        <bitmap android:src="@drawable/sub000" android:gravity="left|top"/>
+    <item
+            minLevel="110"
+            maxLevel="113">
+        <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+            <item>
+                <bitmap
+                        android:src="@drawable/juick_message_icon_128"
+                        android:gravity="left|top"/>
+            </item>
+            <item>
+                <bitmap
+                        android:src="@drawable/sub000"
+                        android:gravity="left|top"/>
+            </item>
+            <item>
+                <bitmap
+                        android:src="@drawable/n100"
+                        android:gravity="left|top"/>
+            </item>
+            <item>
+                <bitmap
+                        android:src="@drawable/n010"
+                        android:gravity="left|top"/>
+            </item>
+            <item>
+                <bitmap
+                        android:src="@drawable/n001"
+                        android:gravity="left|top"/>
+            </item>
+        </layer-list>
     </item>
-    <item>
-        <bitmap android:src="@drawable/n600" android:gravity="left|top"/>
-    </item>
-    <item>
-        <bitmap android:src="@drawable/n020" android:gravity="left|top"/>
-    </item>
-    <item>
-        <bitmap android:src="@drawable/n008" android:gravity="left|top"/>
-    </item>
-</layer-list>
+</level-list>
