--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -29,6 +29,12 @@
         <item>1</item>
     </string-array>
     <string-array name="scaleFontSize">
+        <item>0.1</item>
+        <item>0.12</item>
+        <item>0.15</item>
+        <item>0.18</item>
+        <item>0.2</item>
+        <item>0.25</item>
         <item>0.3</item>
         <item>0.4</item>
         <item>0.5</item>
